[tool.poetry]
name = "undo-cli"
version = "0.1.0"
description = "A CLI tool for undoing actions"
authors = ["yunkiwon <kyyunkiwon@gmail.com>", "j-csc <jasonchen75@gmail.com>"]
readme = "README.md"
packages = [{ include = "undo_cli" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
rich = "^13.7.1"

[tool.poetry.scripts]
oopsies = "undo_cli.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"